<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Project Tango - Augmented Reality Native</string>
    <string name="action_settings">Settings</string>
    <string name="first_person_cam">First</string>
    <string name="third_person_cam">Third</string>
    <string name="top_down_cam">Top</string>
    <string name="auto_recovery_off">Auto Recovery Off</string>
    <string name="auto_recovery_on">Auto Recovery On</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="world">World</string>
    <string name="cube">Cube</string>
    <string name="grid">Grid</string>
    <string name="focal_length">Focal Length</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="near">Near</string>
    <string name="far">Far</string>
</resources>

