<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <android.opengl.GLSurfaceView
        android:id="@+id/surfaceview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/debug_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ToggleButton
            android:id="@+id/auto_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/auto_recovery_off"
            android:textOn="@string/auto_recovery_on" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_person_cam" />

        <Button
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_person_cam" />

        <Button
            android:id="@+id/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_down_cam" />
    </LinearLayout>
    
    <RadioGroup
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:gravity="right"
	    android:orientation="horizontal">
    	<RadioButton android:id="@+id/radio_world"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onRadioButtonClicked"
	        android:text="@string/world"/>
    	<RadioButton android:id="@+id/radio_cube"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onRadioButtonClicked"
	        android:text="@string/cube"/>
    	<RadioButton android:id="@+id/radio_grid"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onRadioButtonClicked"
	        android:text="@string/grid"/>
	<RadioButton android:id="@+id/radio_fx"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onRadioButtonClicked"
	        android:text="@string/focal_length"/>
    </RadioGroup>
	
    <RadioGroup
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:gravity="right"
	    android:orientation="horizontal">
    	<RadioButton android:id="@+id/radio_left"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onDirectionButtonClicked"
	        android:text="@string/left"/>
    	<RadioButton android:id="@+id/radio_right"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onDirectionButtonClicked"
	        android:text="@string/right"/>
    	<RadioButton android:id="@+id/radio_down"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onDirectionButtonClicked"
	        android:text="@string/down"/>
	<RadioButton android:id="@+id/radio_up"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onDirectionButtonClicked"
	        android:text="@string/up"/>
	<RadioButton android:id="@+id/radio_far"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onDirectionButtonClicked"
	        android:text="@string/far"/>
	<RadioButton android:id="@+id/radio_near"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onDirectionButtonClicked"
	        android:text="@string/near"/>
    </RadioGroup>  	
</RelativeLayout>
